<resources>
    <string name="app_name">The Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="instructions">Welcome to Shoe Store App to add and display different shoes Please follow the instructions and the terms</string>
    <string name="login_out">login out</string>
    <string name="welcomeM">Welcome To Shoe App</string>
    <string name="instructions_page">Instructions Page</string>
    <string name="add_new">Add New Shoe Item</string>
    <string name="shoe_l">Shoes list</string>
    <string name="login_">Login Out</string>
</resources>