<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.hassan.elsayed.ammer.shoe_store.ui.fragments.WelcomeFragment"
        android:label="@string/welcomeM"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:popUpTo="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.hassan.elsayed.ammer.shoe_store.ui.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.hassan.elsayed.ammer.shoe_store.ui.fragments.InstructionsFragment"
        android:label="@string/instructions_page"
        tools:layout="@layout/fragment_instructions"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/slide_out_right"
        app:popExitAnim="@anim/slide_out_left">
        <action
            android:id="@+id/action_instructionsFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment"
            app:popUpTo="@id/welcomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim"
            app:popUpToInclusive="true">
            <argument
                android:name="shoeName"
                android:defaultValue="Shoe Name" />
            <argument
                android:name="shoeSize"
                android:defaultValue="45" />
            <argument
                android:name="companyName"
                android:defaultValue="Puma" />
            <argument
                android:name="description"
                android:defaultValue="Sports Runing Shoe" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.hassan.elsayed.ammer.shoe_store.ui.fragments.DetailsFragment"
        android:label="@string/add_new"
        tools:layout="@layout/fragment_details">
        <action
            android:id="@+id/action_detailsFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment"
            app:popUpTo="@id/shoesListFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_detailsFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoesListFragment"
        android:name="com.hassan.elsayed.ammer.shoe_store.ui.fragments.ShoesListFragment"
        android:label="@string/shoe_l"
        tools:layout="@layout/fragment_shoes_list">
        <action
            android:id="@+id/action_shoesListFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_shoesListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>